# pywrap2

./: CMakeLists.txt
.github/workflows/: wheels.yml
src/: main.cpp
src/scikit_build_example/: __init__.py
